--- a/cnlatex/software.tex
+++ b/cnlatex/software.tex
@@ -1,6 +1,8 @@
-\section{\texorpdfstring{\faLaptop\ 开发软件}{开发软件}}
+\section{\texorpdfstring{\faLaptop\ 开发软件 \& 项目}{开发软件 \& 项目}}
+\mycvitemcomment{自2017}{应用统计学与R语言实现笔记}{\myurl{http://gisersqdai.top/Note-of-Applied-Statistics-with-R-Book/}}
 \mycvitemcomment{自2018}{D3L Tool of NASA Satellite}{(这是一个从NASA下载卫星影像如MODIS产品，MERIS和其他产品的图形界面软件,更多信息详见 \myurl{http://gisersqdai.top/D3LTool/})}
 \mycvitemcomment{自2018}{地理探测器R语言版}{(基于R开发的地理探测器)}
 \mycvitemcomment{自2018}{GitHub论文笔记}{(用于论文笔记的软件)}
 \mycvitemcomment{自2019}{rgeoda}{rgeoda是一个基于libgeoda和GeoDa的空间数据分析R包(开源贡献者)}
 \mycvitemcomment{自2020}{COVID-19仪表盘shiny应用}{(基于R shiny开发的COVID-19疫情仪表盘应用. \myurl{https://gisersqdai.shinyapps.io/COVID19VIS/})}
+\mycvitemcomment{自2020}{Awesome COVID-19}{COVID-19资源合集. \myurl{http://covid19.gisersqdai.top/en-us/}}
