--- a/cnlatex/template-zh.tex
+++ b/cnlatex/template-zh.tex
@@ -62,8 +62,8 @@
 \newcommand{\Title}{Curriculum Vit\ae}
 \newcommand{\FirstName}{Shaoqing}
 \newcommand{\LastName}{Dai}
-\newcommand{\Initials}{SQ}
-\newcommand{\Shaoqing}{\textbf{\Initials. \LastName}}
+\newcommand{\Initials}{Shaoqing}
+\newcommand{\Shaoqing}{\textbf{\Initials\ \LastName}}
 
 % Useful macros
 \newcommand{\DOI}[1]{doi:\href{https://doi.org/#1}{#1}}
