--- a/publications.tex
+++ b/publications.tex
@@ -13,107 +13,121 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang. (2020).
+    Peng Jia, \Shaoqing, Tong Wu, Shujuan Yang. (2021).
+    New approaches to anticipate the risk of reverse zoonosis.
+    \textit{Trends in Ecology \& Evolution}. \textit{Accepted}. [SCI, IF = 14.764].
+\item
+    Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia. (2021).
+    Pitfalls in Modeling Asymptomatic COVID-19 Infection.
+    \textit{Frontiers in Public Health}. \textit{9}, 593176.
+    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 2.483].
+\item
+    Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen. (2021).
+    High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
+    \textit{Journal of Cleaner Production}. \textit{297}, 144609.
+    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 7.246].
+\item
+    Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang. (2020).
     The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
     \textit{Science of the Total Environment}. \textit{764}, 144609.
     \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 6.551].
 \item
-    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen. (2020).
+    \Shaoqing\CF, Yin Ren, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
     \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
 \item
-    \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
+    \Shaoqing, Jiajia Li, WeiXu Yang, Fangyu Chen, Huixian Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
     \textit{Shanghai Urban Planning Review}. \textit{05}, 22-29.
     \DOI{10.11982/j.supr.20200504}. [in Chinese] 
 \item
-    P. Jia, \Shaoqing,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou. (2020).
+    Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
     \textit{Obesity Reviews}. 1-9.
     \DOI{10.1111/obr.13097}. [SCI, IF = 7.31]
 \item
-    XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, J. Ning, CX. Li, GJ. Cai, GF. Zhu. (2020).
+    XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
     \textit{Journal of Cleaner Production}. \textit{278}, 123418.
     \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 7.246]
 \item
-    P. Jia, XX. Cao, HX. Yang, \Shaoqing, P. He, GL. Huang, T. Wu, YG. Wang. (2020).
+    Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang. (2020).
     Green space access in the neighbourhood and childhood obesity.
     \textit{Obesity Reviews}. 1-12.
     \DOI{10.1111/obr.13100}. [SCI, IF = 7.31]
 \item
-    MY. Luo, HQ. Li, XF. Pan, T. Fei, \Shaoqing, Q. Ge, YX. Zou, H. Vos, JY. Luo, P. Jia. (2020).
+    Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia. (2020).
     Neighbourhood speed limit and childhood obesity.
     \textit{Obesity Reviews}. 1-11.
     \DOI{10.1111/obr.13052}. [SCI, IF = 7.31]
 \item
-    SY. Xie, GW. Yu, CX. Li, J. Li, G. Wang, \Shaoqing, Y. Wang. (2020).
+    Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang. (2020).
     Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
     \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
     \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 3.905]
 \item
-    XF. Pan, L. Zhao, JY. Luo, YH. Li, L.Zhang, T. Wu, M. Smith, \Shaoqing, P. Jia. (2020).
+    Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2020).
     Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
     \textit{Obesity Reviews}. 1-11.
     \DOI{10.1111/obr.13042}. [SCI, IF = 7.31]
 \item
-    \Shaoqing, SD. Zuo, Y. Ren. (2020).
+    \Shaoqing, Shudi Zuo, Yin Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
     \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.5]
 \item
-    SD. Zuo, \Shaoqing, Y. Ren. (2019).
+    Shudi Zuo, \Shaoqing, Yin Ren. (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
     \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 7.246]
 \item
-    PF. Dou, SD. Zuo, Y. Ren, \Shaoqing, GL. Yun. (2019).
+    Panfeng Dou, Shudi Zuo, Yin Ren, \Shaoqing, Guoliang Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
     \textit{Acta Scientiae Circumstantiae}. \textit{39}(7), 2398-2409.
     \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, in Chinese] 
 \item
-    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
+    Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
     \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 8.848]
 \item
-    GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
+    Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55.
     \DOI{10.3390/atmos10020055}. [SCI, IF = 2.397]
 \item
-    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
+    Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814.
     \DOI{10.3390/rs10111814}. [SCI, IF = 4.509]
 \item
-    SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
+    Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.849]
 \item
-    \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren. (2018).
+    \Shaoqing, Huixian Jiang, Jiajia Li, Xian Su, Juan Wu, Yin Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
     \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244.
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese]
 \item
-    GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
+    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521.
     \DOI{10.3390/rs10040521}. [SCI, IF = 4.509]
 \item
-    Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2018).
+    Qin Ye, Gang Zeng, \Shaoqing, Fenglong Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
     \textit{China Population, Resources and Environment}. \textit{28}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
 \item
-    Q. Ye, \Shaoqing, G. Zeng. (2017).
+    Qin Ye, \Shaoqing, Gang Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
     \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 1.9]
 \item
-    MY. Li, \Shaoqing, JY. Wang, ZJ. Shen. (2016).
+    Miaoyi Li, \Shaoqing, Jingyuan Wang, Zhenjiang Shen. (2016).
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
     \textit{Geomatics World}. \textit{23}(3), 20-26.
     \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese]
@@ -125,11 +139,11 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2019).
+    Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2019).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
 \item
-    \Shaoqing, JJ. Li, SD. Zuo, Y. Ren, HX. Jiang. (2017).
+    \Shaoqing, Jiajia Li, Shudi Zuo, Yin Ren, Huixian Jiang. (2017).
 	Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China.
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
     \DOI{10.1061/9780784481042.028}. [EI]
@@ -140,15 +154,15 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
-     Y. Ren, XM. Zheng, \Shaoqing, Q.Chen, SD. Zuo.
+     Yin Ren, Xiaoman Zheng, \Shaoqing, Qi Chen, Shudi Zuo.
      Improving the accuracy of forest biomass estimate using source analysis and machine learning.
      (\Review).
 \item
-     Y. Ren, \Shaoqing, SD. Zuo, XM. Zheng.
+     Yin Ren, \Shaoqing, Shudi Zuo, Xiaoman Zheng.
      A forest inventory biomass estimation model by multi-sources data fusion.
      (\Review).
 \item
-     Q. Chen, Y. Ren, XM. Zheng, SD. Zuo, \Shaoqing.
+     Qi Chen, Yin Ren, Xiaoman Zheng, Shudi Zuo, \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
      (\Review).
 %\end{etaremune}
@@ -167,11 +181,11 @@
 \subsection*{\texorpdfstring{\faBook\ Conference Paper \& Abstract}{Conference Paper \& Abstract}}
 \begin{enumerate}
 \item
-    \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
+    \Shaoqing, Jiajia Li, Weixu. Yang, Fangyu Chen, Huixian Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
     \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, abstract}
 \item
-    JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
+    Jiajia Li, Yupeng Liu, \Shaoqing, Keying Xiang, Huixian Jiang, Weiqiang Chen. (2019).
     The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
     \textit{10th International Conference on Industrial Ecology, abstract 320}
 \item
@@ -179,39 +193,39 @@
     The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics.
     \textit{11th Chinese R Language Conference, abstract}
 \item
-    \Shaoqing, SD. Zuo, Y. Ren. (2018).
+    \Shaoqing, Shudi Zuo, Yin Ren. (2018).
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
     \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
 \item
-    \Shaoqing\CF, XM. Zheng, SD. Zuo,Y. Ren. (2018).
+    \Shaoqing\CF, Xiaoman Zheng, Shudi Zuo, Yin Ren. (2018).
     Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
     \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
 \item
-    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Shudi Zuo, \Shaoqing, Yin Ren, Zhaowu Yu. (2017).
     Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
     \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
 \item
-    \Shaoqing, Y.Ren, SD. Zuo, M. Dai, P. Chen, Z. Wang, LX. Xu, JW. Qi, GL. Yun. (2017).
+    \Shaoqing, Yin Ren, Shudi Zuo, Min Dai, Pan Chen, Zhao Wang, Lingxing Xu, Jianwei Qi, Guoliang Yun. (2017).
     The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomerations.
     \textit{9th Chinese Landscape Eoclogy workshop, abstract}.
 \item
-    Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2017).
+    Qin Ye, Gang Zeng, \Shaoqing, Fenglong Wang. (2017).
     Research on the Effects of Different Policy Tools on China’s Energy Conservation and Emissions Reduction Innovation Based on the Panel Data of 285 prefectural-level municipalities.
     \textit{2017 annual conference of the Chinese geographical society, economic geography and Specialized Committee Abstracts Proceedings, abstract}.
 \item
-    \Shaoqing, Y.Ren, SD. Zuo. (2017).
+    \Shaoqing, Yin Ren, Shudi Zuo. (2017).
     The relationship between the fragmented urban form landscape and the carbon emission distribution at different resolutions.
     \textit{9th Lecture of Modern Ecology, abstract}.
 \item
-    \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, K. Chen. (2016).
+    \Shaoqing, Huixian Jiang, Jiajia Li, Xian Su, Juan Wu, Kun Chen. (2016).
     The environmental crime analysis based on WalkScore and CGT model, a case study of H city.
     \textit{The Workshop of 12th Spatial Behavior and Planning \& Spatial-Temporal Behavior and Social Planning Researchg, abstract}.
 \item
-    \Shaoqing, HX. Jiang, JJ. Li, QW. Xu. (2016).
+    \Shaoqing, Huixian Jiang, Jiajia Li, Qingwei Xu. (2016).
     Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District.
     \textit{10th annual conference of International Association of China Planning, abstract 1813}.
 \item
-   \Shaoqing, HX. Jiang, JJ. Li. (2016).
+    \Shaoqing, Huixian Jiang, Jiajia Li. (2016).
     The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City.
     \textit{2016 International Low Impact Development Conference, paper 391}.
 \end{enumerate}
@@ -220,13 +234,11 @@
 \begin{enumerate}
 \item
    \Shaoqing. (2020).
-    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0).
-    \textit{[Data set]}. Zenodo. 
+    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0). Zenodo. 
     \DOI{10.5281/zenodo.4277977}.
 \item
-   \Shaoqing, SD. Zuo, Y.Ren. (2020).
-    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.6 (Version 0.6) .
-    \textit{[Data set]}. Zenodo. 
+   \Shaoqing, Shudi Zuo, Yin Ren. (2020).
+    GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.6 (Version 0.6) . Zenodo. 
     \DOI{10.5281/zenodo.3566072}.
 \end{enumerate}
 
@@ -235,29 +247,24 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
+    \Shaoqing\CF, Xiaoman Zheng, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Journal of Cleaner Production}. 
-    (\Review).
+    \textit{Forests}. 
+    (\Revision).
 \item
-    XM. Zheng, \Shaoqing, Q. Chen, K. Calders, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
+    Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
     \textit{Agricultural and Forest Meteorology}. 
     (\Revision).
 \item
-    LL. Song, \Shaoqing, Z. Cao, YP. Liu, WQ. Chen.
-    Spatiotemporal dynamics of steel resources accumulated above ground in mainland China: 1995-2030.
-    \textit{Journal of Cleaner Production}. 
-    (\Review).
+    Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Kuo Yang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang.
+    Two-dimensional copper fingerprints in blood as biomarker for bladder cancer with machine learning.
+    \textit{Nature Communications}. 
+    (\Submitted).
 \item
-    SJ. Yang, \Shaoqing, YL Huang, P. Jia.
-    Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
-    \textit{Frontiers in Public Health}. 
-    (\Review).
-\item
-    PF. Dou, SD.Zuo, Y. Ren, M.J. Rodriguez, \Shaoqing.
-    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
-    \textit{Journal of Hydrology}.
+    Peng Jia, Tong Wu, Amanda Irish, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, \Shaoqing, Jing Su, Wenzhong Shi, Justin V. Remais, Gordon G. Liu, Shujuan Yang.
+    Causes and impact of COVID-19.
+    \textit{Engineering}. 
     (\Revision).
 %\end{etaremune}
 \end{enumerate}
