--- a/researches.tex
+++ b/researches.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faUniversity\ Research Projects}{Research Projects}}
+\mycvitemac{2021-now}{'Investigating the Changes of Residents' Daily Behaviors, Lifestyles, and Built Environment During the COVID-19 Pandemic', WeSpace Academic Support Plan in 2020: "Tsinghua-Tencent" Emerging Technologies Future Urban Space project}{PI}
 \mycvitemac{2018-2019}{'The construction of Typhoon Disaster Assessment Index Based on GIS and Multi-source Remote Sensing Data in Fujian Province', Open Fund of the Big Data Institute of Digital Natural Disaster Monitoring in Fujian (NDMBD2018001)}{Investigator}
 \mycvitemac{2016-2020}{'Research on the key technology research and integration demonstration of urban agglomeration ecological security in the Yangtze River Delta', National Key Research and Development Plan(2016YFC0502704)}{Investigator}
 \mycvitemac{2015-2018}{'Scaling up of carbon sequestration for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation', National Natural Science Foundation of China(31470578)}{Investigator}
