--- a/cnlatex/researches.tex
+++ b/cnlatex/researches.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faUniversity\ 科研项目}{科研项目}}
+\mycvitemac{2021-现在}{'COVID-19大流行下居民日常行为，生活方式与城市建成环境的演变规律研究', 2020年度'清华-腾讯'新兴技术×未来城市空间项目'WeSpace学术支持计划'}{PI}
 \mycvitemac{2018-2019}{'基于GIS和多源遥感数据的福建省台风灾害评价指数构建', 数字福建自然灾害监测大数据研究所开放基金(NDMBD2018001)}{Investigator}
 \mycvitemac{2016-2020}{'长三角城市群生态安全保障关键技术研究与集成示范', 国家重点研发计划(2016YFC0502704)}{Investigator}
 \mycvitemac{2015-2018}{'基于ETKF-3DVAR混合同化的桉树人工林碳固定尺度扩展研究', 国家自然科学基金面上项目(31470578)}{Investigator}
